[project]
name = "creart"
version = "0.2.2"
description = "a universal, extensible class instantiation helper"
authors = [
    {name = "GreyElaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "importlib-metadata>=3.6",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
]

[project.entry-points."creart.creators"]
loop = "creart.builtins.loop:EventLoopCreator"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"